Changes on package.json

--- a/package.json
+++ b/package.json
@@ -2,6 +2,6 @@
   "name": "serverless-static-website-plugin",
   "version": "1.0.0",
   "description": "A plugin to simplify deploying Static Website Application using S3 and CloudFront",
-  "author": "",
+  "author": "Lucas Vieira <lucas.vieira94@outlook.com>",
   "license": "MIT"
 }
